--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "mongodb": "^4.12.0",
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20",
+    "socket.io": "^4.5.3",
     "three": "^0.143.0",
     "threex": "^1.0.0"
   }
